dev/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: dev
  labels:
    app: app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
     containers:
      - name: app
        image: wil42/playground:v2
        ports:
          - containerPort: 8888
